hdone/objects/Specialty__c.object
<CustomObject>
    <fields>
        <fullName>Activeanc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activeanc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activeprov__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activeprov</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ancchapterid__c</fullName>
        <description>Chapter ID for Ancillary providers</description>
        <inlineHelpText>Chapter ID for Ancillary providers</inlineHelpText>
        <label>Ancchapterid</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ancprintname__c</fullName>
        <description>Name used for printing for ancillary providers</description>
        <inlineHelpText>Name used for printing for ancillary providers</inlineHelpText>
        <label>Ancprintname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapterid__c</fullName>
        <description>Chapter ID for individual providers</description>
        <inlineHelpText>Chapter ID for individual providers</inlineHelpText>
        <label>Chapterid</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <description>External Id from Customer. Should be unique across objects for customer.</description>
        <externalId>true</externalId>
        <inlineHelpText>External or Customer Id</inlineHelpText>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>ExternalId</description>
        <externalId>true</externalId>
        <inlineHelpText>ExternalId</inlineHelpText>
        <label>ExternalId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hpnspec_NY__c</fullName>
        <description>NY HPN code for specialty</description>
        <inlineHelpText>NY HPN code for specialty</inlineHelpText>
        <label>Hpnspec_NY</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNRCStatusCheck__c</fullName>
        <description>Last date and time the PartnerNetworkRecordConnection status was updated</description>
        <inlineHelpText>Last date and time the PartnerNetworkRecordConnection status was updated</inlineHelpText>
        <label>PNRCStatusCheck</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PrintName__c</fullName>
        <description>Name used for printing</description>
        <inlineHelpText>Name used for printing</inlineHelpText>
        <label>PrintName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedSpecialtyIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Related_Specialty__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;, 
(CASE(  Related_Specialty__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Related_Specialty__c),
&quot;HealthDetail&quot;, Related_Specialty__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Related_Specialty__r.SourceOrg__c , &quot;HealthDetail&quot;,Related_Specialty__r.ExternalId__c, 
&quot;Customer&quot;, Related_Specialty__r.Remote_SpecialtyId__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer record Id or External Id</inlineHelpText>
        <label>RelatedSpecialtyIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Specialty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related specialty. Used to map to confirmed specialties</description>
        <label>Related Specialty</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Can only lookup to Customer sourced records</errorMessage>
            <filterItems>
                <field>Specialty__c.SourceOrg__c</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <valueField>Specialty__c.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Specialty__c</referenceTo>
        <relationshipLabel>Specialties</relationshipLabel>
        <relationshipName>Specialties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RemoteRelatedSpecialtyId__c</fullName>
        <description>Related Specialty Id. Used for Salesforce to Salesforce Updates</description>
        <externalId>true</externalId>
        <inlineHelpText>Related Specialty Id. Used for Salesforce to Salesforce Updates</inlineHelpText>
        <label>RemoteRelatedSpecialtyId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_SpecialtyId__c</fullName>
        <description>SpecialtyId from remote system</description>
        <inlineHelpText>SpecialtyId from remote system</inlineHelpText>
        <label>Remote SpecialtyId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Id__c</fullName>
        <description>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</description>
        <externalId>true</externalId>
        <inlineHelpText>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</inlineHelpText>
        <label>Sf2Sf_PartnerConnection_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <description>Id from PartnerNetworkRecordConnection for shared record.</description>
        <inlineHelpText>Id from PartnerNetworkRecordConnection for shared record.</inlineHelpText>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareName__c</fullName>
        <description>Sharing name for Salesforce to Salesforce. Uses Custom setting to get name as PartnerNetworkConnection name cannot be changed and can be confusing</description>
        <inlineHelpText>Sharing name for Salesforce to Salesforce from Custom Setting</inlineHelpText>
        <label>Sf2Sf_ShareName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <description>Populates shared status for Salesforce to Salesforce connection. Cannot read status from object only from PartnerNetworkConnection object</description>
        <inlineHelpText>Shared status for Salesforce to Salesforce connection. Not real time.</inlineHelpText>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if record should be shared with other organization. Used for Salesforce to Salesforce.</description>
        <inlineHelpText>Should record be shared?</inlineHelpText>
        <label>Share Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecialtyId_Formula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>CASE( SourceOrg__c  , &quot;Customer&quot;,
CASESAFEID( Id),
&quot;HealthDetail&quot;,
ExternalId__c ,
&quot;Error&quot;)

/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <inlineHelpText>Customer record Id or External Id</inlineHelpText>
        <label>SpecialtyId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialtyRelated_External__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates if external Specialty has been associated with this address.</description>
        <inlineHelpText>External Specialty relationship</inlineHelpText>
        <label>SpecialtyRelated_External</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>SourceOrg cannot be Customer or Null. Please review selection</errorMessage>
            <filterItems>
                <field>$Source.SourceOrg__c</field>
                <operation>equals</operation>
                <value>HealthDetail</value>
            </filterItems>
            <infoMessage>Displaying HealthDetail sourceorgs only</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Specialty__c</referenceTo>
        <relationshipLabel>Specialties (SpecialtyRelated_External)</relationshipLabel>
        <relationshipName>Specialties_External</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specialty_Name__c</fullName>
        <label>Specialty Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of specialty code in data dictionary</description>
        <inlineHelpText>Status of specialty code in data dictionary</inlineHelpText>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxonomy_Code__c</fullName>
        <label>Taxonomy Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Specialty type</description>
        <inlineHelpText>Specialty type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Care</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Version of data dictionary codes are based on</description>
        <inlineHelpText>Version of data dictionary codes are based on</inlineHelpText>
        <label>Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Specialty</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Specialty_Name__c</columns>
        <columns>NAME</columns>
        <columns>PrintName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPEC-{000000}</displayFormat>
        <label>Specialty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>